* Fixed horizontal alignment of Login and Registration forms on mobile

--- a/src/view/Views/Register/RegisterView.scss
+++ b/src/view/Views/Register/RegisterView.scss
@@ -1,4 +1,8 @@
 /* Registration view */
+.form-container {
+  align-items: center;
+}
+
 .register-form {
   width: 100%;
   min-width: 100px;
